--- a/pipline.yaml
+++ b/pipline.yaml
@@ -1,32 +1,29 @@
 trigger:
-- master
+- main 
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: My-pool
 
 jobs:
 - job: TerraformTestJob
   displayName: 'Test Terraform Script'
+  pool:
+    vmImage: 'ubuntu-latest'  
   steps:
   - checkout: self
 
-  - task: UseDotNet@2
-    displayName: 'Install DotNet SDK'
-    inputs:
-      packageType: 'sdk'
-      version: '3.1.x'
-      installationPath: $(Agent.ToolsDirectory)/dotnet
-
-  - task: UseNode@2
-    displayName: 'Install Node.js'
-    inputs:
-      version: '10.x'
-
   - script: |
       # Installer Terraform
+      TERRAFORM_VERSION="v1.6.6"  
+
+      # Ajouter la clé GPG de HashiCorp
       curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+
+      # Ajouter le référentiel HashiCorp aux sources APT
       echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list > /dev/null
-      sudo apt-get update && sudo apt-get install terraform
+
+      # Mettre à jour les paquets et installer Terraform
+      sudo apt-get update && sudo apt-get install terraform="$TERRAFORM_VERSION"
 
       # Initialiser Terraform
       terraform init
@@ -36,4 +33,8 @@ jobs:
 
       # Appliquer Terraform en mode auto-approve
       terraform apply -auto-approve
+
+      # Afficher la version installée de Terraform
+      terraform --version
     displayName: 'Test and Apply Terraform Configuration'
+
