--- a/pipline.yaml
+++ b/pipline.yaml
@@ -8,7 +8,8 @@ jobs:
 - job: TerraformTestJob
   displayName: 'Test Terraform Script'
   pool:
-    vmImage: 'ubuntu-latest'  
+    vmImage: 'ubuntu-latest' 
+    parallel: 1 
   steps:
   - checkout: self
 
