--- a/pipline.yaml
+++ b/pipline.yaml
@@ -15,7 +15,7 @@ stages:
     - task: UseDotNet@2
       displayName: "Installer Maven"
       inputs:
-        version: "3.9"
+        version: "JDKVersion"
         mavenVersionOption: "Path"
         mavenPathOption: "MavenWrapper"
 
