--- a/pipline.yaml
+++ b/pipline.yaml
@@ -41,8 +41,8 @@ stages:
 
     - script: |
         # Récupérer des informations sur l'agent
-        AGENT_NAME=$(My-pool1)
-        AGENT_IP=$(My-pool1 -I | awk '{print $1}')
+        AGENT_NAME=$(my-pool9)
+        AGENT_IP=$(my-pool9 -I | awk '{print $1}')
 
         # Installer OpenJDK
         sudo apt-get update
