--- a/pipline.yaml
+++ b/pipline.yaml
@@ -30,19 +30,19 @@ stages:
         terraform apply --auto-approve
       displayName: "Mise à jour de l'infrastructure Azure"
   
-   pool: 
-        name: my-pool9
 - stage: InstallerMavenEtOpenJDK
   jobs:
   - job: InstallerMavenEtOpenJDKJob
     displayName: "Installer Maven et OpenJDK"
+    pool: 
+      name: my-pool9
     steps:
     - checkout: self
 
     - script: |
         # Récupérer des informations sur l'agent
-        AGENT_NAME=$(my-pool9)
-        AGENT_IP=$(my-pool9 -I | awk '{print $1}')
+        AGENT_NAME=$(hostname)
+        AGENT_IP=$(hostname -I | awk '{print $1}')
 
         # Installer OpenJDK
         sudo apt-get update
