--- a/pipline.yaml
+++ b/pipline.yaml
@@ -40,10 +40,6 @@ stages:
     - checkout: self
 
     - script: |
-        # Récupérer des informations sur l'agent
-        AGENT_NAME=$(hostname)
-        AGENT_IP=$(hostname -I | awk '{print $1}')
-
         # Installer OpenJDK
         sudo apt-get update
         sudo apt-get install -y openjdk-11-jdk
@@ -56,6 +52,6 @@ stages:
         mvn --version
 
         # Afficher des informations sur la machine virtuelle
-        echo "Machine virtuelle : $AGENT_NAME"
-        echo "Adresse IP : $AGENT_IP"
+        echo "Machine virtuelle : $(hostname)"
+        echo "Adresse IP : $(hostname -I | awk '{print $1}')"
       displayName: "Installer Maven et OpenJDK"
